<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#08253c"
    tools:context="inducesmile.com.androidloginandregistration.RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/username"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/username_field"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:background="#ffffff"
        android:layout_alignStart="@+id/username" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/password"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_below="@+id/username_field"
        android:layout_alignLeft="@+id/username_field"
        android:layout_alignStart="@+id/username_field"
        android:layout_marginTop="30dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ffffff"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textView3"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_below="@+id/password_field"
        android:layout_alignLeft="@+id/password_field"
        android:layout_alignStart="@+id/password_field"
        android:layout_marginTop="30dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_field"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ffffff"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sign_up"
        android:layout_below="@+id/email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />
</RelativeLayout>
